Fix review about Event and fix header style from catalog

--- a/apps/catalog/catalog/src/app/marketplace/marketplace.component.scss
+++ b/apps/catalog/catalog/src/app/marketplace/marketplace.component.scss
@@ -33,6 +33,7 @@ layout-marketplace {
     align-items: center;
     
     header {
+      flex: 1;
       margin-inline: 24px;
       gap: 24px;
     }
