--- a/libs/ui/src/lib/layout/event/event.component.html
+++ b/libs/ui/src/lib/layout/event/event.component.html
@@ -1,5 +1,5 @@
 <div class="bg-navigation" [ngClass]="{ hide: !showNavigation }" (click)="closeNavigation()"></div>
-<aside [ngClass]="{ opened: showNavigation }">
+<aside *ngIf="(isAnonymous$ | async) === false" [ngClass]="{ opened: showNavigation }">
   <mat-toolbar>
     <a app-logo routerLink="."></a>
     <a app-logo-icon routerLink="."></a>
@@ -13,6 +13,7 @@
 <div id="event-content" [appContainer]="app" (toggle)="toggleNavigation()">
   <!-- TOOLBAR -->
   <app-bar #app>
+    <a app-logo routerLink="." *ngIf="(isAnonymous$ | async)"></a>
     <header fxLayout fxLayoutAlign="start center">
       <button *ngIf="(user$ | async)" test-id="menu" mat-icon-button (click)="toggleNavigation()">
         <mat-icon svgIcon="menu"></mat-icon>
