--- a/libs/ui/src/lib/layout/event/event.component.scss
+++ b/libs/ui/src/lib/layout/event/event.component.scss
@@ -49,7 +49,7 @@ mat-sidenav-container {
     }
 
     a:first-of-type {
-      margin-right: auto;
+      margin-left: auto;
     }
   }
 
@@ -65,6 +65,14 @@ mat-sidenav-container {
 
 app-bar {
   padding: 0 24px;
+  position: relative;
+}
+
+app-bar > a[app-logo] {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin-block: auto;
 }
 
 /* Outline none used to remove the automatic rectangular focus on Safari */
