--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -1,4 +1,4 @@
-<list-page [items]="movies$ | async">
+<list-page [items]="movies">
 
   <!-- App Bar Search -->
   <list-page-app-bar>
@@ -26,61 +26,7 @@
 
   <!-- FILTERS (ng-content) -->
   <list-filter>
-
-    <ng-template filter label="Sales Agent" [form]="searchForm.sellers">
-      <algolia-chips-autocomplete index="org" displayWithPath="name" [filters]="['appModule:dashboard']"
-        [form]="searchForm.sellers" label="Search for a Sales Agent" placeholder="Organization name">
-      </algolia-chips-autocomplete>
-    </ng-template>
-
-    <ng-template filter label="Genre" [form]="searchForm.genres">
-      <chips-autocomplete [form]="searchForm.genres" scope="genres">
-        <mat-label>Genres</mat-label>
-      </chips-autocomplete>
-    </ng-template>
-
-    <ng-template filter label="Country of Origin" [form]="searchForm.originCountries">
-      <chips-autocomplete [form]="searchForm.originCountries" placeholder="Country of Origin" scope="territories">
-        <mat-label>Type and select Country</mat-label>
-      </chips-autocomplete>
-    </ng-template>
-
-    <ng-template filter label="Language & Version" [form]="searchForm.languages">
-      <title-language-filter [form]="searchForm.languages"></title-language-filter>
-    </ng-template>
-
-    <ng-template filter label="Production Status" [form]="searchForm.productionStatus">
-      <static-check-boxes fxLayout="column" fxLayoutGap="12px" [form]="searchForm.productionStatus"
-        scope="productionStatus">
-      </static-check-boxes>
-    </ng-template>
-
-    <ng-template filter label="Budget" [form]="searchForm.minBudget">
-      <filter-budget fxLayout="column" [form]="searchForm.minBudget"></filter-budget>
-    </ng-template>
-
-    <ng-template filter label="Release Year" [form]="searchForm.minReleaseYear">
-      <filter-release-year fxLayout="column" [form]="searchForm.minReleaseYear"></filter-release-year>
-    </ng-template>
-
-    <ng-template filter label="Festival Name" [form]="searchForm.festivals">
-      <static-check-boxes fxLayout="column" fxLayoutGap="12px" [form]="searchForm.festivals"
-        scope="festival">
-      </static-check-boxes>
-    </ng-template>
-
-    <ng-template filter label="Qualifications" [form]="searchForm.certifications">
-      <static-check-boxes fxLayout="column" fxLayoutGap="12px" [form]="searchForm.certifications"
-        scope="certifications">
-      </static-check-boxes>
-    </ng-template>
-
-    <list-filter-buttons (data)="load($event)"></list-filter-buttons>
-
-    <button mat-button class="refresh" (click)="clear()" matTooltip="Clear all filters">
-      <mat-icon svgIcon="refresh_filters"></mat-icon>
-      <span>Clear Filters</span>
-    </button>
+    <movie-festival-title-search (newTest)="test($event)"></movie-festival-title-search>
   </list-filter>
 
   <!-- TITLE COUNT (ng-content)-->
@@ -92,7 +38,7 @@
   </list-page-description>
 
   <!-- EXPORT (ng-content)-->
-  <pdf-export *ngIf="movies$ | async as movies">
+  <pdf-export *ngIf="movies">
     <button [disabled]="exporting" mat-button (click)="export(movies)" matTooltip="Export to PDF">
       <mat-icon svgIcon="pdf"></mat-icon>
       <span>Export {nbHits, plural, =1 {title} other {titles}}</span>
