movie tunnel until 'production information'

--- a/libs/ui/src/lib/form/list/form-list.component.html
+++ b/libs/ui/src/lib/form/list/form-list.component.html
@@ -56,7 +56,7 @@
     <span>
       <ng-template [ngTemplateOutlet]="addButtonText || defaultText"></ng-template>
     </span>
-    <button test-id="list-save" mat-mini-fab color="primary" (click)="add()"
+    <button test-id="list-add" mat-mini-fab color="primary" (click)="add()"
       [disabled]="formItem?.invalid && !formItem?.dirty">
       <mat-icon svgIcon="add"></mat-icon>
     </button>
