--- a/apps/backend-functions/src/assets/style/titles.css
+++ b/apps/backend-functions/src/assets/style/titles.css
@@ -14,6 +14,12 @@ h1 {
 h2 {
   font: 800 36px Montserrat, Helvetica Neue, sans-serif;
   margin-top: 0px;
+  margin-bottom: 10px;
+}
+
+h3 {
+  font: 700 18px Montserrat, Helvetica Neue, sans-serif;
+  margin-bottom: 0px;
 }
 
 section {
@@ -26,7 +32,12 @@ section {
 
 .left-column {
   flex: 30%;
-  padding: 10px;
+  padding: 10px 0;
+}
+
+.certification-desc {
+  margin-left: 10px;
+  font-size: 11px;
 }
 
 .right-column {
@@ -34,7 +45,7 @@ section {
   padding: 10px;
 }
 
-.right-column p{
+.right-column p {
   font-weight: bold;
 }
 
@@ -43,9 +54,10 @@ section {
   padding: 10px;
 }
 
-div .synopsis {
+div .synopsis, div .cast {
   color: #666B81;
   text-align: justify;
+  margin-top: 5px;
 }
 
 hr.solid {
@@ -59,7 +71,7 @@ div.links div {
   text-align: center;
 }
 
-div.links a {
+div.links a, .title .right-column a {
   font-weight: bold;
 }
 
@@ -70,6 +82,7 @@ div.links a {
 ul.prizes {
   list-style: none;
   padding-left: 0;
+  margin-top: 5px;
 }
 
 ul.prizes li:not(:last-child) {
