improved cast display

--- a/apps/backend-functions/src/assets/templates/titles.html
+++ b/apps/backend-functions/src/assets/templates/titles.html
@@ -71,7 +71,7 @@
         {{#if cast}}
           <div>
             <h3>Cast</h3>
-            <p class="cast">{{cast}}...</p>
+            <p class="cast">{{cast}}</p>
           </div>
         {{/if}}
 
