--- a/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
@@ -23,6 +23,13 @@
         <span>Archived </span>
         <span *ngIf="(movieCount$ | async) as movieCount">({{ movieCount.archived }})</span>
       </button>
+      <ng-container *ngIf="result$ | async as result">
+        <span fxFlex></span>
+        <button [disabled]="!result.length || exporting" mat-button (click)="export(result)">
+          <mat-icon svgIcon="pdf"></mat-icon>
+          <span>Export results</span>
+        </button>
+      </ng-container>
     </header>
 
     <bf-table [source]="result$ | async" useFilter pagination="50">
