all steps until last step

--- a/libs/movie/src/lib/movie/form/additional-information/additional-information.component.html
+++ b/libs/movie/src/lib/movie/form/additional-information/additional-information.component.html
@@ -45,7 +45,7 @@
 
     <h3>Budget Range</h3>
     <section id="budget-range">
-      <movie-form-budget-range test-id="budget-range" [form]="form.estimatedBudget"></movie-form-budget-range>
+      <movie-form-budget-range [form]="form.estimatedBudget"></movie-form-budget-range>
     </section>
 
     <mat-divider></mat-divider>
