--- a/libs/movie/src/lib/movie/form/budget/range/budget-range.component.html
+++ b/libs/movie/src/lib/movie/form/budget/range/budget-range.component.html
@@ -1,6 +1,6 @@
 <mat-form-field [appearance]="appearance">
   <mat-label>Budget Range</mat-label>
-  <mat-select [formControl]="form" [placeholder]="placeholder">
+  <mat-select [formControl]="form" [placeholder]="placeholder" test-id="budget-range">
     <mat-option [value]="null"></mat-option>
     <mat-option *ngFor="let opt of optionsBudget" [value]="opt">
       {{ opt | toLabel: 'budgetRange' }}
