--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.scss
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.scss
@@ -24,6 +24,11 @@ mat-form-field {
   justify-content: center;
 }
 
+list-page-progress {
+  margin-top: 72px;
+  margin-bottom: 16px;
+}
+
 list-page-description, pdf-export button {
   margin: 24px;
 }
