--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -92,8 +92,8 @@
   </list-page-description>
 
   <!-- EXPORT (ng-content)-->
-  <pdf-export *ngIf="movies$ | async as movies">
-    <button [disabled]="exporting" mat-button (click)="export(movies)" matTooltip="Export to PDF">
+  <pdf-export *ngIf="nbHits">
+    <button [disabled]="exporting" mat-button (click)="export()" matTooltip="Export to PDF">
       <mat-icon svgIcon="pdf"></mat-icon>
       <span>Export {nbHits, plural, =1 {title} other {titles}}</span>
     </button>
