--- a/libs/movie/src/lib/movie/form/additional-information/additional-information.component.html
+++ b/libs/movie/src/lib/movie/form/additional-information/additional-information.component.html
@@ -6,7 +6,7 @@
 
         <bf-form-list [form]="form.originalRelease">
           <ng-template itemRef let-release>{{ release.country | toLabel: 'territories' }} -
-            {{ release.media | toLabel: 'medias' }} - {{ release.date | date: 'shortDate' }}</ng-template>
+            {{ release.media | toLabel: 'releaseMedias' }} - {{ release.date | date: 'shortDate' }}</ng-template>
           <ng-template formView let-releaseForm>
             <article [formGroup]="releaseForm" fxLayout="column" fxLayoutGap="24px">
 
@@ -15,7 +15,7 @@
                   <mat-label>Country</mat-label>
                 </static-select>
 
-                <static-select test-id="release-media" [control]="releaseForm.get('media')" scope="medias" fxFlex
+                <static-select test-id="release-media" [control]="releaseForm.get('media')" scope="releaseMedias" fxFlex
                   [withoutValues]="['payPerView', 'est', 'nVod','aVod', 'fVod', 'sVod', 'tVod', 'inflight', 'boats', 'educational', 'rental','through', 'hotels']">
                   <mat-label>Release Media</mat-label>
                 </static-select>
