--- a/apps/festival/festival/src/app/dashboard/title/list/list.component.html
+++ b/apps/festival/festival/src/app/dashboard/title/list/list.component.html
@@ -20,7 +20,7 @@
       </button>
       <ng-container *ngIf="result$ | async as result">
         <span fxFlex></span>
-        <button [disabled]="!result.length || exporting" mat-button (click)="export(result)">
+        <button [disabled]="!result.length || exporting" matTooltip="Links in the export will redirect to the marketplace" mat-button (click)="export(result)">
           <mat-icon svgIcon="pdf"></mat-icon>
           <span>Export results</span>
         </button>
