--- a/apps/crm/crm/src/app/crm/pages/contracts/list/list.component.html
+++ b/apps/crm/crm/src/app/crm/pages/contracts/list/list.component.html
@@ -1,11 +1,14 @@
 <ng-container *ngIf="contracts$ | async as contracts; else loading">
+  <button [disabled]="exporting" mat-flat-button color="primary" (click)="exportTable(contracts)">
+    <span>Export to CSV</span>
+    <mat-icon svgIcon="arrow_upward"></mat-icon>
+  </button>
+
   <mandates-list [mandates]="contracts.mandates">  </mandates-list>
 
-  <external-sales-list [sales]="contracts.sales">
-    <section fxLayout="column" fxLayoutAlign="center center" fxFlexGap="16">
-      <h1>There are no Deals yet.</h1>
-      <img asset="empty_contract.svg" alt="Image, you have no sales yet">
-    </section>
+  <external-sales-list [sales]="contracts.externalSales">
+    <h1>There are no Deals yet.</h1>
+    <img asset="empty_contract.svg" alt="Image, you have no sales yet">
   </external-sales-list>
 </ng-container>
 
