--- a/libs/movie/src/lib/movie/form/summary/artistic/artistic.component.html
+++ b/libs/movie/src/lib/movie/form/summary/artistic/artistic.component.html
@@ -9,7 +9,7 @@
   <ul>
     <missing-control [control]="movie.cast" [link]="link" fragment="cast-member">
       <ng-template let-casts="control">
-        <li test-id="cast-summary" *ngFor="let cast of casts.controls" fxLayout="column">
+        <li *ngFor="let cast of casts.controls; let i = index" fxLayout="column" [attr.test-id]="'cast_' + i">
           <article fxLayout="row">
             <strong>
               <missing-control [control]="cast.get('firstName')" [link]="link" fragment="cast-member"></missing-control>
@@ -44,7 +44,7 @@
   <ul>
     <missing-control [control]="movie.crew" fragment="crew-member" [link]="link">
       <ng-template let-crew="control">
-        <li test-id="crew-summary" *ngFor="let crew of crew.controls" fxLayout="column">
+        <li *ngFor="let crew of crew.controls; let i = index" fxLayout="column" [attr.test-id]="'crew_' + i">
           <article fxLayout="row">
             <strong>
               <missing-control [control]="crew.get('firstName')" [link]="link" fragment="crew-member"></missing-control>
