--- a/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
@@ -3,7 +3,7 @@
     <dashboard-movie-list-header></dashboard-movie-list-header>
 
     <header mat-tab-nav-bar fxLayout="row" fxLayoutAlign="space-between end">
-      <button mat-tab-link (click)="resetFilter()" [active]="(filter$|async) === ''">
+      <button mat-tab-link (click)="resetFilter()" [active]="(filter$ | async) === ''">
         <span>All </span>
         <span *ngIf="(movieCount$ | async) as movieCount">({{ movieCount.all }})</span>
       </button>
@@ -25,7 +25,7 @@
       </button>
       <ng-container *ngIf="result$ | async as result">
         <span fxFlex></span>
-        <button [disabled]="!result.length || exporting" matTooltip="Links in the export will redirect to the marketplace" mat-button (click)="export(result)">
+        <button [disabled]="!result.length || exporting || ((filter$ | async) !== '' && (filter$ | async) !== 'accepted')" matTooltip="Links in the export will redirect to the marketplace" mat-button (click)="export(result)">
           <mat-icon svgIcon="pdf"></mat-icon>
           <span>Export results</span>
         </button>
