--- a/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
+++ b/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
@@ -15,7 +15,7 @@
           *ngIf="(titleCount$ | async) as titleCount">({{ titleCount.archived }})</span></button>
       <ng-container *ngIf="titles">
         <span fxFlex></span>
-        <button [disabled]="!titles.length || exporting" matTooltip="Links in the export will redirect to the marketplace" mat-button (click)="export(titles)">
+        <button [disabled]="!titles.length || exporting || (filter.value !== 'all' && filter.value !== 'achieved')" matTooltip="Links in the export will redirect to the marketplace" mat-button (click)="export(titles)">
           <mat-icon svgIcon="pdf"></mat-icon>
           <span>Export results</span>
         </button>
